--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   <body>
     <header>
       <nav>
-        <a href=""> webstudio </a>
+        <a href="./index.html"> webstudio </a>
         <ul>
-          <li>Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
+          <li><a href=""> Studio </a></li>
+          <li><a href="">Portfolio </a></li>
+          <li><a href="">Contacts </a></li>
         </ul>
       </nav>
 
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com"> info@devstudio.com</a></li>
-          <li><a href="tel:+11000111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -32,6 +32,7 @@
       </section>
 
       <section>
+        <h2>Second section</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -71,34 +72,28 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <h3>
-              <img src="./images/mark.jpg" alt="Mark`s photo" width="264" />
-              Mark Guerrero
-            </h3>
+            <img src="./images/mark.jpg" alt="Mark`s photo" width="264" />
+            <h3>Mark Guerrero</h3>
+
             <p>Product Designer</p>
           </li>
 
           <li>
-            <h3>
-              <img src="./images/tom.jpg" alt="Tom`s photo" width="264" /> Tom
-              Ford
-            </h3>
+            <img src="./images/tom.jpg" alt="Tom`s photo" width="264" />
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
-            <h3>
-              <img src="./images/camila.jpg" alt="Camila`s photo" width="264" />
-              Camila Garcia
-            </h3>
+            <img src="./images/camila.jpg" alt="Camila`s photo" width="264" />
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
 
           <li>
-            <h3>
-              <img src="./images/daniel.jpg" alt="Daniel`s photo" width="264" />
-              Daniel Wilson
-            </h3>
+            <img src="./images/daniel.jpg" alt="Daniel`s photo" width="264" />
+            <h3>Daniel Wilson</h3>
+
             <p>UI Designer</p>
           </li>
         </ul>
@@ -106,7 +101,7 @@
     </main>
 
     <footer>
-      <h3>webstudio</h3>
+      <a href="./index.html"> webstudio </a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
