--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
 
   <body>
@@ -32,38 +32,26 @@
       </section>
 
       <section>
-        <h2>Second section</h2>
+        <h2>Advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
+            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
           </li>
 
           <li>
             <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
+            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
           </li>
 
           <li>
             <h3>Diligence</h3>
-            <p>
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
+            <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
           </li>
 
           <li>
             <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
+            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
           </li>
         </ul>
       </section>
@@ -102,10 +90,7 @@
 
     <footer>
       <a href="./index.html"> WebStudio </a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
 </html>
